# publication_api

./: Cargo.toml
api/: DocumentTypes.json  Documents.json
src/: deserialization.rs  document_type.rs  error.rs  lib.rs  models.rs  publication_api.rs  signatory_authority.rs
src/parsers/: mod.rs  prezident_ukaz.rs
