[package]
name = "publication"
version = "0.1.5"
edition = "2021"

[dependencies]
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
scraper="0.22.0"
thiserror="2.0.6"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tokio= {version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "bytes"] }

sha256 = "1.5.0"
# similar = "2.5.0"
# nom="7.1.3"
# aho-corasick = "1.1.3"
# regex="*"
# once_cell="*"
[dev-dependencies]
tokio-test= {version ="0.4.4"}